<?xml version="1.0"?>
<package format="2">
  <name>laser_slam</name>
  <version>0.0.0</version>
  <description>The laser_slam package</description>

  <maintainer email="sikang@seas.upenn.edu">Sikang Liu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>quadrotor_msgs</depend>
  <depend>gtsam_util</depend>
  <depend>gtsam</depend>
  <depend>csm</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>
</package>
